# api

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
config/lint/: mypy.ini
docker/flask/: Dockerfile
docker/flask-dev/: Dockerfile
python/: main.py
python/app/: chat.py  diary.py  events.py  index.py
python/auth/: login.py  user.py
python/web/: response.py  routes.py
