[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["shu <shu@ceshmina.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
google-cloud-firestore = "^2.10.0"
flask-login = "^0.6.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
